--- a/WindowsOptimizer.csproj
+++ b/WindowsOptimizer.csproj
@@ -9,10 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MaterialDesignThemes" Version="5.3.0-ci1105" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-preview.7.25380.108" />
+      <PackageReference Include="FluentIcons.Common" Version="1.1.312" />
       <PackageReference Include="NVAPI" Version="1.0.440" />
-      <PackageReference Include="System.Management" Version="10.0.0-preview.7.25380.108" />
+      <PackageReference Include="Prism.Unity" Version="9.0.537" />
+      <PackageReference Include="Prism.Wpf" Version="9.0.537" />
+      <PackageReference Include="System.Management" Version="10.0.0-rc.1.25451.107" />
+      <PackageReference Include="WPF-UI" Version="4.0.3" />
     </ItemGroup>
 
 </Project>
