--- a/WindowsOptimizer.csproj
+++ b/WindowsOptimizer.csproj
@@ -10,9 +10,19 @@
 
     <ItemGroup>
       <PackageReference Include="FluentIcons.Common" Version="1.1.312" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="NVAPI" Version="1.0.440" />
       <PackageReference Include="Prism.Unity" Version="9.0.537" />
       <PackageReference Include="Prism.Wpf" Version="9.0.537" />
+      <PackageReference Include="Serilog" Version="4.3.1-dev-02387" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.3-dev-02320" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.1-dev-00953" />
+      <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+      <PackageReference Include="Serilog.Sinks.SQLite" Version="6.0.0" />
       <PackageReference Include="System.Management" Version="10.0.0-rc.1.25451.107" />
       <PackageReference Include="WPF-UI" Version="4.0.3" />
     </ItemGroup>
